Fixed spacing for paragraphs

--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -232,7 +232,7 @@ body {
 .portfolio-desc p {
     font-size:18px;
     letter-spacing: 2px;
-    max-width: 480px;
+    max-width: 530px;
     width: 100%;
 }
 
@@ -291,7 +291,7 @@ body {
     }
 
     .home-desc > * {
-        margin: 10px;
+        margin: 10px 0;
     }
 
     .home-desc p {
@@ -323,7 +323,7 @@ body {
     }
 
     .about-desc > * {
-        margin: 10px;
+        margin: 10px 0;
     }
 
     .about-desc p {
@@ -355,7 +355,7 @@ body {
     }
 
     .portfolio-desc > * {
-        margin: 10px;
+        margin: 10px 0;
     }
 
     .portfolio-desc p {
